@@ -32,9 +32,6 @@ NULL
 #' # Use vars() to supply faceting variables:
 #' p + facet_wrap(vars(class))
 #'
-#' # The historical interface with formulas is also available:
-#' p + facet_wrap(~class)
-#'
 #' # Control the number of rows and columns with nrow and ncol
 #' p + facet_wrap(vars(class), nrow = 4)
 #'
@@ -47,14 +44,14 @@ NULL
 #' # Use the `labeller` option to control how labels are printed:
 #' ggplot(mpg, aes(displ, hwy)) +
 #'   geom_point() +
-#'   facet_wrap(c("cyl", "drv"), labeller = "label_both")
+#'   facet_wrap(vars(cyl, drv), labeller = "label_both")
 #'
 #' # To change the order in which the panels appear, change the levels
 #' # of the underlying factor.
 #' mpg$class2 <- reorder(mpg$class, mpg$displ)
 #' ggplot(mpg, aes(displ, hwy)) +
 #'   geom_point() +
-#'   facet_wrap(~class2)
+#'   facet_wrap(vars(class2))
 #'
 #' # By default, the same scales are used for all panels. You can allow
 #' # scales to vary across the panels with the `scales` argument.
@@ -62,14 +59,14 @@ NULL
 #' # harder to compare across panels.
 #' ggplot(mpg, aes(displ, hwy)) +
 #'   geom_point() +
-#'   facet_wrap(~class, scales = "free")
+#'   facet_wrap(vars(class), scales = "free")
 #'
 #' # To repeat the same data in every panel, simply construct a data frame
 #' # that does not contain the faceting variable.
 #' ggplot(mpg, aes(displ, hwy)) +
 #'   geom_point(data = transform(mpg, class = NULL), colour = "grey85") +
 #'   geom_point() +
-#'   facet_wrap(~class)
+#'   facet_wrap(vars(class))
 #'
 #' # Use `strip.position` to display the facet labels at the side of your
 #' # choice. Setting it to `bottom` makes it act as a subtitle for the axis.
@@ -77,7 +74,7 @@ NULL
 #' # strip labels.
 #' ggplot(economics_long, aes(date, value)) +
 #'   geom_line() +
-#'   facet_wrap(~variable, scales = "free_y", nrow = 2, strip.position = "bottom") +
+#'   facet_wrap(vars(variable), scales = "free_y", nrow = 2, strip.position = "top") +
 #'   theme(strip.background = element_blank(), strip.placement = "outside")
 #' }
 facet_wrap <- function(facets, nrow = NULL, ncol = NULL, scales = "fixed",
